# garbled-circuits

./: .gitignore  Cargo.toml  README.md  example1.garbled  plot_memory_sim.py  plot_usage_distribution.py
.github/workflows/: cron-zizmor.yml  docs.yml  lint.yml  release.yml  security.yml  unit.yml  zizmor.yml
example_ckts/: adder64.bristol  and4.bristol  mult64.bristol
gc/: Cargo.toml
gc-cli/: Cargo.toml
gc-cli/src/: main.rs
gc-integration-tests/: Cargo.toml
gc-integration-tests/src/: lib.rs  plain_evaluator.rs
gc-integration-tests/tests/: integration_tests.rs
gc/src/: memory_simulation.rs  ot_simulation.rs  stream.rs
src/: bin.rs  constants.rs  counter.rs  evaluator.rs  garbler.rs  lib.rs  main.rs  memory_simulation.rs  ot_simulation.rs  single_use_analyzer.rs  stream.rs  wire_analyzer.rs
