[package]
name = "gc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
rand = "0.8"
rand_chacha = "0.3"
rkyv = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
zstd = "0.13"

[dev-dependencies]
tempfile = "3.0"
