[workspace]
members = ["gc", "gc-cli"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0"
bincode = "2.0"
indicatif = "0.18"
rand = "0.9"
rand_chacha = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.21"

[workspace.package]
edition = "2024"
authors = ["Mukesh Tiwari <mukesh@alpenlabs.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/alpenlabs/garbled-circuits"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "warn"
rust.unused_must_use = "deny"
rust.unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage, coverage_nightly)',
] }
rust.missing_docs = "warn"
rustdoc.all = "warn"
clippy.too_long_first_doc_paragraph = "warn"

[profile.release]
opt-level = 3     # Optimized for size, use 3 for speed
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduced to increase optimizations
panic = "abort"   # Abort on panic
strip = "symbols" # Strip symbols from binary
